--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-blur": "^11.1.0",
     "expo-constants": "~13.1.1",
+    "expo-font": "^10.1.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "9.6.7",
     "react": "17.0.2",
